--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     background-color: rgba(00, 00, 99, 0.5)
 }
 .round-corner-right {
-    border-radius: 0px 40px 40px 0px !important;
+    border-radius: 0px 0px 40px 40px !important ;
 }
 .round-corner-left {
     border-radius: 40px 0px 0px 40px !important;
@@ -12,4 +12,18 @@
 }
 .image-container {
     margin: 20px;
+}
+/* .form-control:hover {
+    background-color: #c3e6e5;
+} */
+
+.colr:hover {
+    background-color: #c3e6e5;
+}
+.well2{
+	background: url('../images/ka.jpg') 0% 20%;
+	border-radius:0px 0px 40px 40px; 
+}
+.well{	
+	opacity: 0.95;
 }
