--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@
     background-color: #c3e6e5;
 } */
 
+.legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: inherit;
+    color: #333;
+    border: 0;
+    border-bottom: 1px solid #e5e5e5;
+}
 .colr:hover {
     background-color: #c3e6e5;
 }
